// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox renders correctly > when autoFocus 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    autoFocus={true}
    className="input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  />
</label>
`;

exports[`Checkbox renders correctly > when checked 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    checked={true}
    className="input"
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  />
</label>
`;

exports[`Checkbox renders correctly > when default checked 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    className="input"
    defaultChecked={true}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  />
</label>
`;

exports[`Checkbox renders correctly > when disabled 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    className="input"
    defaultChecked={false}
    disabled={true}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  />
</label>
`;

exports[`Checkbox renders correctly > when interminate 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    className="input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M2.25 10C2.25 9.58579 2.58579 9.25 3 9.25H17C17.4142 9.25 17.75 9.58579 17.75 10C17.75 10.4142 17.4142 10.75 17 10.75H3C2.58579 10.75 2.25 10.4142 2.25 10Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  />
</label>
`;

exports[`Checkbox renders correctly > with ariaLabelledBy 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    aria-labelledby="aria"
    className="input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  />
</label>
`;

exports[`Checkbox renders correctly > with empty props 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    className="input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  />
</label>
`;

exports[`Checkbox renders correctly > with name 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    className="input"
    defaultChecked={false}
    disabled={false}
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  />
</label>
`;

exports[`Checkbox renders correctly > with props 1`] = `
<label
  className="wrapper dummy-class-name"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label="Option 1"
    className="input"
    defaultChecked={false}
    disabled={false}
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value="option1"
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  >
    Option 1
  </span>
</label>
`;

exports[`Checkbox renders correctly > with value 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    className="input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value="checkboxValue"
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
  <span
    className="typography primary start singleLineEllipsis text text2Normal label"
    data-testid="checkbox-label"
  />
</label>
`;

exports[`Checkbox renders correctly > without label 1`] = `
<label
  className="wrapper"
  data-testid="checkbox"
  data-vibe="Checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label=""
    className="input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="checkbox"
    data-testid="checkbox-checkbox"
  >
    <svg
      aria-hidden={true}
      className="icon icon noFocusStyle"
      data-testid="icon"
      data-vibe="Icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 20 20"
      width="16"
    >
      <circle
        cx="10"
        cy="10"
        fill="currentColor"
        r="3"
      />
    </svg>
  </div>
</label>
`;
